# xcmixin

./: .clang-format  .gitignore  CMakeLists.txt  README-zh.md  README.md
.github/workflows/: cl.yml
examples/: CMakeLists.txt  oop.cc  overload-msvc-bug.cc  template.cc  test.cc
xcmixin/: xcmixin.hpp
